--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
               Show only recipes I can cook now
             </span>
           </label>
+<button
+  type="button"
+  id="toggleCookable"
+  class="secondary small"
+>
+  Show all recipes
+</button>
           <label class="filter">
             <input type="checkbox" id="filterFavorites" />
             <span data-i18n="filterFavorites">Favorites only</span>
@@ -145,6 +152,24 @@
     </small>
   </footer>
 
-  <script src="app.js"></script>
+ <!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "PASTE_YOUR_API_KEY_HERE",
+    authDomain: "PASTE_FROM_FIREBASE",
+    projectId: "PASTE_FROM_FIREBASE",
+    storageBucket: "PASTE_FROM_FIREBASE",
+    messagingSenderId: "PASTE_FROM_FIREBASE",
+    appId: "PASTE_FROM_FIREBASE"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+</script>
+
+ <script src="app.js"></script>
 </body>
 </html>
